# clawhive

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md  install.sh  justfile
.github/workflows/: ci.yml  release.yml
crates/clawhive-auth/src/: manager.rs
crates/clawhive-auth/src/oauth/: anthropic.rs  mod.rs  openai.rs  server.rs
crates/clawhive-bus/src/: lib.rs
crates/clawhive-channels/: Cargo.toml
crates/clawhive-channels/src/: dingtalk.rs  discord.rs  telegram.rs  wecom.rs
crates/clawhive-cli/: Cargo.toml
crates/clawhive-cli/src/: main.rs  setup.rs  setup_scan.rs
crates/clawhive-cli/src/commands/: chat.rs  code.rs  consolidate.rs  dashboard.rs  mod.rs  schedule.rs  start.rs  status.rs
crates/clawhive-cli/src/commands/setup/: agent.rs  channel.rs  config_io.rs  mod.rs  provider.rs  scan.rs  tools.rs  ui.rs
crates/clawhive-cli/src/runtime/: bootstrap.rs  pid.rs
crates/clawhive-core/: Cargo.toml
crates/clawhive-core/src/: access_gate.rs  audit.rs  config.rs  context.rs  language_prefs.rs  lib.rs  orchestrator.rs  persona.rs  policy.rs  router.rs  schedule_tool.rs  shell_tool.rs  skill_install.rs  skill_install_state.rs  skill_tool.rs  slash_commands.rs  subagent.rs  subagent_tool.rs  tool.rs  workspace_manager.rs
crates/clawhive-core/src/router/: cooldown.rs  failover.rs  mod.rs
crates/clawhive-core/tests/: integration.rs  mock_server_integration.rs  openai_mock_server_integration.rs  sandbox_integration.rs  skill_install_authz.rs  skill_install_nl_bridge.rs  skill_install_security.rs
crates/clawhive-gateway/: Cargo.toml
crates/clawhive-gateway/src/: lib.rs  webhook.rs
crates/clawhive-memory/src/: file_store.rs  session.rs
crates/clawhive-provider/src/: anthropic.rs  azure_openai.rs  gemini.rs  lib.rs  openai.rs  openai_chatgpt.rs  openai_compat.rs  types.rs
crates/clawhive-scheduler/src/: config.rs  manager.rs  sqlite_store.rs  state.rs
crates/clawhive-scheduler/tests/: integration.rs
crates/clawhive-schema/src/: lib.rs  provider_presets.rs
crates/clawhive-server/: Cargo.toml  build.rs
crates/clawhive-server/src/: lib.rs  state.rs
crates/clawhive-server/src/routes/: agents.rs  auth.rs  channels.rs  chat.rs  mod.rs  providers.rs  routing.rs  schedules.rs  setup.rs  skills.rs
crates/clawhive-tui/src/code/: mod.rs
crates/clawhive-tui/src/code/bottom_pane/: approval.rs  mod.rs  slash_command.rs
docs/plans/: 2026-03-03-chat-skill-install-clawhive.md
docs/research/: skill-install-chat-rollout.md
skills/actionbook/: SKILL.md
skills/actionbook/references/: commands.md  selectors.md
skills/actionbook/scripts/: fetch_tweet.sh
web/: package-lock.json
web/src/components/channels/: add-connector-dialog.tsx
web/src/components/providers/: openai-oauth-setup.tsx
web/src/hooks/: use-api.ts
web/src/lib/: api.ts
web/src/pages/: Agents.tsx  Channels.tsx  Providers.tsx  Routing.tsx  Schedules.tsx  Sessions.tsx  Setup.tsx  Skills.tsx
