[workspace]
resolver = "2"
members = [
  "crates/clawhive-schema",
  "crates/clawhive-bus",
  "crates/clawhive-core",
  "crates/clawhive-gateway",
  "crates/clawhive-memory",
  "crates/clawhive-runtime",
  "crates/clawhive-provider",
  "crates/clawhive-auth",
  "crates/clawhive-channels",
  "crates/clawhive-cli",
  "crates/clawhive-tui",
  "crates/clawhive-server",
  "crates/clawhive-scheduler",
]

[workspace.package]
edition = "2021"
version = "0.1.0-alpha.22"
license = "MIT"
authors = ["dragon"]
rust-version = "1.92.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures-core = "0.3"
async-stream = "0.3"
bytes = "1"
async-trait = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled", "vtab"] }
sqlite-vec = "0.1.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
teloxide = { version = "0.13", features = ["macros"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
log = "0.4"
ratatui = "0.29"
crossterm = "0.28"
tempfile = "3"
wiremock = "0.6"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
rust-embed = "8"
mime_guess = "2"
semver = "1"
sha2 = "0.10"
self-replace = "1"
